--- a/Dockerfile-nightly
+++ b/Dockerfile-nightly
@@ -3,13 +3,15 @@ MAINTAINER Salvador E. Tropea <stropea@inti.gob.ar>
 LABEL Description="Minimal KiCad image based on Debian"
 
 COPY *.list /
+COPY *.deb /
 RUN	apt-get -y update && \
 	apt-get -y install --no-install-recommends gnupg2 && \
 	apt-key adv --keyserver keyserver.ubuntu.com --recv-keys FDA854F61C4D0D9572BB95E5245D5502FAD7A805  && \
 	apt-get -y remove gnupg2 && \
 	mv /*.list /etc/apt/sources.list.d/ && \
 	apt-get -y update && \
-	apt-get -y install --no-install-recommends kicad-nightly kicad-nightly-symbols kicad-nightly-footprints && \
+	apt-get -y install /libpython3.8-stdlib_3.8.7-1_amd64.deb /libpython3.8_3.8.7-1_amd64.deb /libpython3.8-minimal_3.8.7-1_amd64.deb && \
+	apt-get -y install --no-install-recommends libocct-data-exchange-7.4 libocct-ocaf-7.4 libngspice0 kicad-nightly kicad-nightly-symbols kicad-nightly-footprints && \
 	apt-get -y autoremove && \
 	rm -rf /var/lib/apt/lists/* \
 	rm -rf /usr/share/icons/Adwaita/
