--- a/Dockerfile-nightly
+++ b/Dockerfile-nightly
@@ -11,7 +11,8 @@ RUN	apt-get -y update && \
 	mv /*.list /etc/apt/sources.list.d/ && \
 	apt-get -y update && \
 	apt-get -y install /libpython3.8-stdlib_3.8.7-1_amd64.deb /libpython3.8_3.8.7-1_amd64.deb /libpython3.8-minimal_3.8.7-1_amd64.deb && \
-	apt-get -y install --no-install-recommends libocct-data-exchange-7.4 libocct-ocaf-7.4 libngspice0 kicad-nightly kicad-nightly-symbols kicad-nightly-footprints && \
+	apt-get -y install /libocct-*.deb && \
+	apt-get -y install --no-install-recommends libngspice0 kicad-nightly kicad-nightly-symbols kicad-nightly-footprints && \
 	apt-get -y autoremove && \
 	rm -rf /var/lib/apt/lists/* \
 	rm -rf /usr/share/icons/Adwaita/
