--- a/.github/workflows/docker-image-nightly.yml
+++ b/.github/workflows/docker-image-nightly.yml
@@ -3,7 +3,7 @@ name: Docker Hub upload (normal)
 on:
   push:
     tags:
-      - b*
+      - n*
 
 jobs:
   push_to_registry:
@@ -29,7 +29,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       with:
-        # context: tools/dev_image
+        context: nightly
         push: true
-        tags: setsoft/kicad_debian:latest
+        tags: setsoft/kicad_debian:nightly
         labels: ${{ steps.meta.outputs.labels }}
