--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - b*
+  repository_dispatch:
+    types: [build_k5]
 
 jobs:
   push_to_registry:
@@ -33,3 +35,7 @@ jobs:
         push: true
         tags: setsoft/kicad_debian:latest
         labels: ${{ steps.meta.outputs.labels }}
+
+    - name: Trigger KiCad-Auto image build
+      run: |
+        curl -X POST -u "${{secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" -H "Accept: application/vnd.github.v3+json" -H "Content-Type: application/json" https://api.github.com/repos/INTI-CMNB/kicad_auto/dispatches --data '{"event_type": "build_k5"}'
