Added a script to downloaded the .debs from GitHub
- Looks like GitHub fails with 403 when saturated, using the one-liner
  we don't get the error and some images ends without one or more tools.
  This script tries to fix this issue.

--- a/.github/workflows/docker-image-nightly.yml
+++ b/.github/workflows/docker-image-nightly.yml
@@ -19,6 +19,10 @@ jobs:
     - name: Check out the repo
       uses: actions/checkout@v3
 
+    - name: Copy download script
+      run: |
+        cp dl_deb.py nightly/
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
