Moved tools dependencies to the base

--- a/base_os/Dockerfile
+++ b/base_os/Dockerfile
@@ -10,8 +10,18 @@ RUN     sed -i -e's/ main/ main contrib non-free/g' /etc/apt/sources.list  && \
 	echo "deb http://deb.debian.org/debian bullseye-backports main" >> /etc/apt/sources.list && \
 	apt-get update  && \
 	apt-get -y install --no-install-recommends -t bullseye-backports git && \
-	apt-get -y install make rar bzip2 librsvg2-bin ghostscript && \
-	apt-get -y install --no-install-recommends imagemagick python3-qrcodegen poppler-utils python3-requests && \
+	apt-get -y install --no-install-recommends make rar bzip2 librsvg2-bin ghostscript && \
+	apt-get -y install --no-install-recommends imagemagick python3-qrcodegen poppler-utils python3-requests python3-xlsxwriter && \
+	echo "KiCost Digi-Key plugin dependencies"  && \
+	apt -y install --no-install-recommends python3-certifi python3-dateutil python3-inflection python3-openssl python3-pkg-resources python3-requests python3-six python3-tldextract python3-urllib3 && \
+	echo "KiCost dependencies"  && \
+	apt -y install --no-install-recommends python3-bs4 python3-colorama python3-lxml python3-requests python3-tqdm python3-validators python3-wxgtk4.0 python3-yaml && \
+	echo "KiKit dependencies"  && \
+	apt -y install --no-install-recommends python3-click python3-commentjson python3-markdown2 python3-numpy python3-shapely openscad  && \
+	echo "KiAuto dependencies"  && \
+	apt -y install --no-install-recommends python3-psutil python3-xvfbwrapper recordmydesktop xdotool xsltproc xclip  && \
+	echo "KiDiff dependencies"  && \
+	apt -y install --no-install-recommends xdg-utils  && \
 	sed -i 's/<policy domain="coder" rights="none" pattern="PDF" \/>/<!-- <policy domain="coder" rights="none" pattern="PDF" \/> -->/g' /etc/ImageMagick-6/policy.xml && \
 	sed -i 's/<policy domain="coder" rights="none" pattern="PS" \/>/<!-- <policy domain="coder" rights="none" pattern="PS" \/> -->/g' /etc/ImageMagick-6/policy.xml && \
 	echo "Needed for GitHub, seen on git 2.39.1"  && \
