--- a/.github/workflows/docker-image-base_os.yml
+++ b/.github/workflows/docker-image-base_os.yml
@@ -36,5 +36,7 @@ jobs:
       run: |
         cd base_os
         ./build.sh
-        docker push ghcr.io/inti-cmnb/base_os:d11
 
+    - name: Trigger Base OS full image build
+      run: |
+        curl -X POST -u "${{secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" -H "Accept: application/vnd.github.v3+json" -H "Content-Type: application/json" https://api.github.com/repos/INTI-CMNB/kicad_debian/dispatches --data '{"event_type": "build_base_os_full"}'
