--- a/ki6/Dockerfile
+++ b/ki6/Dockerfile
@@ -1,13 +1,13 @@
-FROM debian:bullseye-slim
+FROM ghcr.io/inti-cmnb/base_os:latest
 MAINTAINER Salvador E. Tropea <stropea@inti.gob.ar>
-LABEL Description="Minimal KiCad 6 image based on Debian"
+LABEL Description="KiCad 6 on Debian + base tool"
+LABEL org.opencontainers.image.description "KiCad 6 on Debian + tool dependencies"
 
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Etc/UTC
-COPY kicad_3d_install.sh dl_deb.py /usr/bin/
-RUN	echo "deb http://deb.debian.org/debian bullseye-backports main" >> /etc/apt/sources.list && \
-	apt-get -y update && \
+COPY kicad_3d_install.sh kicad_version.py /usr/bin/
+RUN     apt-get -y update && \
 	apt-get -y install -t bullseye-backports --no-install-recommends kicad kicad-symbols kicad-templates kicad-footprints && \
 	apt-get -y autoremove && \
-	rm -rf /var/lib/apt/lists/* \
+	rm -rf /var/lib/apt/lists/* /var/cache/debconf/templates.dat-old /var/lib/dpkg/status-old && \
 	rm -rf /usr/share/icons/Adwaita/
