Added Deja Vu font
- Needed for KiCad 7 schematic print tests

--- a/base_os_full/Dockerfile
+++ b/base_os_full/Dockerfile
@@ -13,6 +13,7 @@ RUN     apt-get update  && \
 	                                           unzip \
 	                                           zbar-tools \
 	                                           procps \
+	                                           fonts-dejavu \
 	                                           xlsx2csv && \
 	echo "Pull xdg-utils, but without recommendations" && \
 	apt-get -y install --no-install-recommends xdg-utils libxkbcommon0 && \
