--- a/.github/workflows/docker-image-ki7_full.yml
+++ b/.github/workflows/docker-image-ki7_full.yml
@@ -37,6 +37,6 @@ jobs:
         cd ki7_full
         ./build.sh
 
-#    - name: Trigger KiCad-Auto image build
-#      run: |
-#        curl -X POST -u "${{secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" -H "Accept: application/vnd.github.v3+json" -H "Content-Type: application/json" https://api.github.com/repos/INTI-CMNB/kicad_auto_test/dispatches --data '{"event_type": "build_k7p"}'
+    - name: Trigger KiCad-Auto image build
+      run: |
+        curl -X POST -u "${{secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" -H "Accept: application/vnd.github.v3+json" -H "Content-Type: application/json" https://api.github.com/repos/INTI-CMNB/kicad_auto_test/dispatches --data '{"event_type": "build_k7p"}'
