--- a/.github/workflows/docker-image-nightly_full.yml
+++ b/.github/workflows/docker-image-nightly_full.yml
@@ -40,3 +40,4 @@ jobs:
     - name: Trigger KiCad-Auto image build
       run: |
         curl -X POST -u "${{secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" -H "Accept: application/vnd.github.v3+json" -H "Content-Type: application/json" https://api.github.com/repos/INTI-CMNB/kicad_auto_test/dispatches --data '{"event_type": "build_nightlyp"}'
+        curl -X POST -u "${{secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" -H "Accept: application/vnd.github.v3+json" -H "Content-Type: application/json" https://api.github.com/repos/INTI-CMNB/kicad_debian/dispatches --data '{"event_type": "clean"}'
