--- a/base_os_nightly/Dockerfile
+++ b/base_os_nightly/Dockerfile
@@ -10,7 +10,7 @@ RUN     apt-get update  && \
 	apt-get -y install --no-install-recommends git && \
 	apt-get -y install --no-install-recommends make rar bzip2 librsvg2-bin ghostscript && \
 	apt-get -y install --no-install-recommends imagemagick python3-qrcodegen poppler-utils python3-requests python3-xlsxwriter && \
-	echo "KiCad 7.99 needs backported python3-wxgtk4.0"
+	echo "KiCad 7.99 needs backported python3-wxgtk4.0" && \
 	apt-get -y install --no-install-recommends -t kinetic-backports python3-wxgtk4.0  && \
 	echo "KiCost Digi-Key plugin dependencies"  && \
 	apt -y install --no-install-recommends python3-certifi python3-dateutil python3-inflection python3-openssl python3-pkg-resources python3-requests python3-six python3-tldextract python3-urllib3 && \
