Moved the PPA addition to the beginning

--- a/base_os_nightly/Dockerfile
+++ b/base_os_nightly/Dockerfile
@@ -7,11 +7,15 @@ ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Etc/UTC
 COPY dl_deb.py /usr/bin/
 RUN     apt-get update  && \
+	echo "We need the PPA for the backported python3-wxgtk4.0" && \
+	apt-get install -y software-properties-common && \
+	add-apt-repository ppa:kicad/kicad-dev-nightly && \
+	apt-get update && \
+	echo "KiCad 7.99 needs backported python3-wxgtk4.0" && \
+	apt-get -y install --no-install-recommends python3-wxgtk4.0  && \
 	apt-get -y install --no-install-recommends git && \
 	apt-get -y install --no-install-recommends make rar bzip2 librsvg2-bin ghostscript && \
 	apt-get -y install --no-install-recommends imagemagick python3-qrcodegen poppler-utils python3-requests python3-xlsxwriter && \
-	echo "KiCad 7.99 needs backported python3-wxgtk4.0" && \
-	apt-get -y install --no-install-recommends -t kinetic-backports python3-wxgtk4.0  && \
 	echo "KiCost Digi-Key plugin dependencies"  && \
 	apt -y install --no-install-recommends python3-certifi python3-dateutil python3-inflection python3-openssl python3-pkg-resources python3-requests python3-six python3-tldextract python3-urllib3 && \
 	echo "KiCost dependencies"  && \
