Added nightly generation of nightly images

--- a/.github/workflows/docker-image-nightly.yml
+++ b/.github/workflows/docker-image-nightly.yml
@@ -6,6 +6,8 @@ on:
       - n*
   repository_dispatch:
     types: [build_nightly]
+  schedule:
+    - cron: '43 5 * * 1-5'
 
 jobs:
   push_to_registry:
