Changing to non-Debian Blender 3.5.1
- The Debian packager for Blender doesn't really understand the
  huge damage he is doing, rendering the package useless for
  CPU only usage.

--- a/base_os_full/Dockerfile
+++ b/base_os_full/Dockerfile
@@ -16,17 +16,32 @@ RUN     apt-get update  && \
 	                                           fonts-dejavu \
 	                                           xlsx2csv && \
 	echo "Pull xdg-utils, but without recommendations" && \
-	apt-get -y install --no-install-recommends xdg-utils libxkbcommon0 && \
 	apt-get -y install pandoc texlive-latex-base texlive-latex-recommended && \
+	echo "ODBC support (for KiCad 7+) and GIT LFS" && \
+	apt-get -y install libodbc1 libsqliteodbc git-lfs && \
+	echo "Install Coveralls helpers (KiBot coverage)" && \
 	apt-get -y install curl python3-coverage && \
 	dl_deb.py set-soft/coveralls-python && \
 	apt-get -y install --no-install-recommends ./*.deb && \
 	rm *.deb && \
-	apt-get -y install --no-install-recommends wget git-lfs blender && \
-	apt-get -y install odbcinst libodbc1 libsqliteodbc && \
-	echo "Install plug-in deps: pillow and skia-python (pip, numpy, etc.)" && \
-	apt-get -y install --no-install-recommends python3-pil python3-pybind11 && \
-	python3 -m pip install --break-system-packages skia-python && \
 	apt-get -y autoremove && \
-	rm -rf /var/lib/apt/lists/* /var/cache/debconf/templates.dat-old /var/lib/dpkg/status-old && \
+	rm -rf /var/lib/apt/lists/* /var/cache/debconf/templates.dat-old /var/lib/dpkg/status-old
+
+RUN	echo "Install Blender" && \
+	apt-get update  && \
+	apt-get -y install --no-install-recommends xz-utils wget && \
+	wget https://mirrors.ocf.berkeley.edu/blender/release/Blender3.5/blender-3.5.1-linux-x64.tar.xz && \
+	tar xvf blender-3.5.1-linux-x64.tar.xz --strip-components=1 -C /usr/bin/ && \
+	rm blender-3.5.1-linux-x64.tar.xz && \
+	apt-get -y remove xz-utils wget && \
+	apt-get -y autoremove && \
+	rm -rf /var/lib/apt/lists/* /var/cache/debconf/templates.dat-old /var/lib/dpkg/status-old
+
+RUN	echo "Install blender plug-in deps: pillow and skia-python (pip, numpy, etc.)" && \
+	curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && \
+	/usr/bin/3.5/python/bin/python3.10 get-pip.py && \
+	/usr/bin/3.5/python/bin/python3.10 -m pip install numpy && \
+	/usr/bin/3.5/python/bin/python3.10 -m pip install pillow && \
+	/usr/bin/3.5/python/bin/python3.10 -m pip install skia-python && \
+	rm -rf get-pip.py && \
 	rm -rf /root/.cache/pip/
