--- a/ki5_full/Dockerfile
+++ b/ki5_full/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/inti-cmnb/base_os_full:latest
+FROM ghcr.io/inti-cmnb/base_os_full:d11.6_b3.4
 MAINTAINER Salvador E. Tropea <stropea@inti.gob.ar>
 LABEL Description="KiCad 5 on Debian + heavy tools"
 LABEL org.opencontainers.image.description "KiCad 5 on Debian + heavy tools"
