Switched to use Ubuntu Lunar KiCad 7 packages
- They install perfectly on Debian 12

--- a/ki7_full/Dockerfile
+++ b/ki7_full/Dockerfile
@@ -6,9 +6,12 @@ LABEL org.opencontainers.image.description "KiCad 7 on Debian + heavy tools"
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Etc/UTC
 COPY kicad_3d_install.sh kicad_version.py /usr/bin/
-RUN     apt-get -y update && \
-	dl_deb.py -r KiCad_7.0.5.1 -s kicad-demos -- INTI-CMNB/kicad_debian && \
-	apt-get -y install --no-install-recommends /*.deb && \
+# GPG key obtained using: https://unix.stackexchange.com/questions/679495/now-that-apt-key-is-deprecated-how-do-you-add-an-ubuntu-ppa-as-a-debian-apt-sou
+COPY kicad-7.0-releases.gpg /usr/share/keyrings/
+# Debian 12.1 and Ubuntu Lunar (23.04) are quite similar on 2023-08
+RUN     echo "deb [signed-by=/usr/share/keyrings/kicad-7.0-releases.gpg] https://ppa.launchpadcontent.net/kicad/kicad-7.0-releases/ubuntu lunar main" >> /etc/apt/sources.list && \
+	apt-get -y update && \
+	apt-get install -y --no-install-recommends kicad kicad-footprints kicad-symbols kicad-templates && \
 	apt-get -y autoremove && \
 	rm -rf /var/lib/apt/lists/* /var/cache/debconf/templates.dat-old /var/lib/dpkg/status-old && \
 	rm -rf /usr/share/icons/Adwaita/ /*.deb
