[Base OS Full] Added data for default GTK 2/3 themes
- Used by GNOME, can solve missing dark aspect of KiCad

--- a/base_os_full/Dockerfile
+++ b/base_os_full/Dockerfile
@@ -14,7 +14,7 @@ RUN     apt-get update  && \
 	                                           zbar-tools \
 	                                           procps \
 	                                           fonts-dejavu \
-	                                           xlsx2csv && \
+	                                           xlsx2csv gnome-themes-extra-data && \
 	echo "Pull xdg-utils, but without recommendations" && \
 	apt-get -y install pandoc texlive-latex-base texlive-latex-recommended && \
 	echo "ODBC support (for KiCad 7+) and GIT LFS" && \
