Disabling nightly schedule
Switching to 8.0.0 release

--- a/.github/workflows/docker-image-base_os_nightly.yml
+++ b/.github/workflows/docker-image-base_os_nightly.yml
@@ -6,8 +6,8 @@ on:
       - bon_*
   repository_dispatch:
     types: [build_base_os_nightly]
-  schedule:
-    - cron: '43 5 * * 1-5'
+#  schedule:
+#    - cron: '43 5 * * 1-5'
 
 jobs:
   push_to_registry:
