Switching nightly to 8.0.0 release

--- a/base_os_nightly/Dockerfile
+++ b/base_os_nightly/Dockerfile
@@ -1,4 +1,4 @@
-FROM kicad/kicad:nightly
+FROM kicad/kicad:8.0
 MAINTAINER Salvador E. Tropea <stropea@inti.gob.ar>
 LABEL Description="Debian with basic tools for KiBot"
 LABEL org.opencontainers.image.description "Debian with basic tools for KiBot"
