--- a/.github/workflows/docker-image-base_os.yml
+++ b/.github/workflows/docker-image-base_os.yml
@@ -36,6 +36,7 @@ jobs:
       run: |
         cd base_os
         ./build.sh
+        ./push.sh
 
     - name: Trigger Base OS full image build
       run: |
