--- a/.github/workflows/docker-image-base_os_sid.yml
+++ b/.github/workflows/docker-image-base_os_sid.yml
@@ -38,6 +38,7 @@ jobs:
       run: |
         cd base_os_sid
         ./build.sh
+        ./push.sh
 
     - name: Trigger Base OS full image build
       run: |
