--- a/.github/workflows/docker-image-ki6_full.yml
+++ b/.github/workflows/docker-image-ki6_full.yml
@@ -36,6 +36,7 @@ jobs:
       run: |
         cd ki6_full
         ./build.sh
+        ./push.sh
 
     - name: Trigger KiCad-Auto image build
       run: |
