--- a/.github/workflows/docker-image-stable_nightly_full.yml
+++ b/.github/workflows/docker-image-stable_nightly_full.yml
@@ -38,6 +38,7 @@ jobs:
       run: |
         cd stable_nightly_full
         ./build.sh
+        ./push.sh
 
     - name: Trigger KiCad-Auto image build
       run: |
